# disir-c-frontend-rs

./: Cargo.toml  README.adoc
c/: Cargo.toml
c/src/: lib.rs
c/src/c/: mod.rs
remote/: .gitmodules  Cargo.toml
remote/disir-protobuf/: README.adoc  disir.proto
remote/src/: disirpb.rs  lib.rs
remote/src/query/: mod.rs
src/: main.rs
