[package]
name = "disir_c_frontend"
version = "0.1.0"
authors = ["Vegard Sandengen <vegardsandengen@gmail.com>"]

[dependencies]
disir_remote = { path = "remote" }
disir_c = { path = "c" }
futures = "^0.1.13"
tokio-core = "^0.1.6"
tokio-io = "^0.1.1"
tokio-tungstenite = "^0.1.2"
tungstenite = "^0.2.0"
